# POID_AUDIO

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: IImageProcessor.h  UserChoiceHandler.h  Utility.h  WindowApplicator.h
src/: UserChoiceHandler.cpp  Utility.cpp  WindowApplicator.cpp
